--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,41 @@
 * {
-    font-family: 'Press Start 2P', 'Arial Narrow', Arial, sans-serif;
-    font-size: 12px;
-    color: whitesmoke;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 20px;
+    /* color: #97eb85; */
+    color: gainsboro;
     margin: 0px;
     padding: 0px;
+}
+
+.grid {
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    z-index: -1;
+    padding-left: 500px;
+}
+
+.rotate {
+    animation: rotation 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
+
+.linear {
+    animation-timing-function: linear;
+}
+
+.infinite {
+    animation-iteration-count: infinite;
 }
 
 .menu-content {
@@ -22,6 +54,9 @@ ul {
 }
 
 .menu-item {
+    font-family: 'Press Start 2P';
+    font-size: 16px;
+    color: #97eb85;
     list-style: none;
     padding: 14px;
     border-bottom: 1px solid whitesmoke;
@@ -53,6 +88,7 @@ ul {
     border-bottom: 1px solid;
     border-color: white;
     /* box-shadow: 1px 6px 4px -4px grey; */
+    top: 0px;
     padding: 8px;
     margin-bottom: 24px;
 }
@@ -71,21 +107,24 @@ ul {
 }
 
 .about p {
+    font-family: 'Press Start 2P';
     font-size: 24px;
+    color: #97eb85;
     margin-bottom: 12px;
+    margin-top: 24px;
 }
 
 .description {
-    font-size: 12px;
-    margin-bottom: 12px;
-    margin-left: 100px;
+    margin: 120px 0 12px 100px;
 }
 
 .name {
-    font-size: 48px;
+    font-size: 64px;
     color: #97eb85;
     text-shadow: 0px 8px 12px #b13063;
     /* text-align: center; */
+    margin-left: 80px;
+    margin-top: 50px;
 }
 
 .footer {
@@ -94,17 +133,20 @@ ul {
     padding: 16px;
 }
 
+.footer p {
+    font-family: 'Press Start 2P';
+    font-size: 12px;
+}
+
 .main {
     display: flex;
 }
 
 .about {
     width: 100vw;
-    height: 90vh;
+
 }
 
 body {
-    /* background: linear-gradient(to bottom, #660066 0%, #000066 100%); */
     background-color: #202632;
-    background-size: no-repeat;
 }
