--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,17 @@
 }
 
 .grid {
-    height: 300px;
-    width: 300px;
+    height: 150px;
+    width: 150px;
     position: absolute;
+    top: 200px;
+    left: 60%;
+    padding-left: 250px;
     z-index: -1;
-    padding-left: 500px;
 }
 
 .rotate {
-    animation: rotation 30s;
+    animation: rotation 60s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -57,21 +59,37 @@ ul {
     font-family: 'Press Start 2P';
     font-size: 16px;
     color: #97eb85;
+    text-shadow: 2px 2px 2px hotpink;
     list-style: none;
     padding: 14px;
     border-bottom: 1px solid whitesmoke;
 }
 
+.menu-item:hover {
+    background-color: gray;
+}
+
 .menu-switch:hover {
-    text-shadow: 2px 2px 2px #b13063;
+    background-color: gray;
 }
 
 #menu-collapsed:checked ~ .menu-content  {
     display: none;
 }
 
+.collapse {
+    color: #97eb85;
+    text-shadow: 2px 2px 2px hotpink;
+}
+
+.expand {
+    color: #97eb85;
+    text-shadow: 2px 2px 2px hotpink;
+}
+
 .menu-switch {
     margin-top: 12px;
+    width: 40px;
 }
 
 #menu-collapsed:checked ~ .menu-switch .collapse {
@@ -94,11 +112,10 @@ ul {
 }
 
 .profile {
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
     border-radius: 25%;
     margin-bottom: 36px;
-    margin-left: 20px;
 }
 
 .home {
@@ -110,18 +127,19 @@ ul {
     font-family: 'Press Start 2P';
     font-size: 24px;
     color: #97eb85;
+    text-shadow: 2px 2px 2px hotpink;
     margin-bottom: 12px;
     margin-top: 24px;
 }
 
 .description {
-    margin: 120px 0 12px 100px;
+    margin: 80px 0 12px 100px;
 }
 
 .name {
     font-size: 64px;
     color: #97eb85;
-    text-shadow: 0px 8px 12px #b13063;
+    text-shadow: 2px 4px 7px hotpink;
     /* text-align: center; */
     margin-left: 80px;
     margin-top: 50px;
@@ -136,6 +154,8 @@ ul {
 .footer p {
     font-family: 'Press Start 2P';
     font-size: 12px;
+    color: #97eb85;
+    text-shadow: 1px 1px 1px hotpink;
 }
 
 .main {
